feat: 6개의 숫자 중 중복된 숫자가 없어야 한다.